tests/type_errors/map_option_sum.nos
# expect_error: does not implement Num
# map to options then sum - Option doesn't implement Num
main() = [1,2,3].map(x => Some(x)).sum()
